// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree-select/demo/basic.md correctly 1`] = `
<span
  class="wmstool-select wmstool-select-enabled wmstool-select-allow-clear"
  style="width:300px"
>
  <span
    aria-autocomplete="list"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <span
      class="wmstool-select-selection__rendered"
    >
      <span
        class="wmstool-select-selection__placeholder"
      >
        Please select
      </span>
    </span>
    <span
      class="wmstool-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/checkable.md correctly 1`] = `
<span
  class="wmstool-select wmstool-select-enabled"
  style="width:300px"
>
  <span
    aria-autocomplete="list"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--multiple"
    role="combobox"
  >
    <ul
      class="wmstool-select-selection__rendered"
    >
      <li
        class="wmstool-select-selection__choice"
        style="user-select:none;-webkit-user-select:none"
        title="Node1"
        unselectable="unselectable"
      >
        <span
          class="wmstool-select-selection__choice__remove"
        />
        <span
          class="wmstool-select-selection__choice__content"
        >
          Node1
        </span>
      </li>
      <li
        class="wmstool-select-search wmstool-select-search--inline"
      >
        <span
          class="wmstool-select-search__field__wrap"
        >
          <input
            class="wmstool-select-search__field"
            role="textbox"
            value=""
          />
          <span
            class="wmstool-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
    <span
      class="wmstool-select-search__field__placeholder"
      style="display:none"
    >
      Please select
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/multiple.md correctly 1`] = `
<span
  class="wmstool-select wmstool-select-enabled wmstool-select-allow-clear"
  style="width:300px"
>
  <span
    aria-autocomplete="list"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--multiple"
    role="combobox"
  >
    <ul
      class="wmstool-select-selection__rendered"
    >
      <li
        class="wmstool-select-search wmstool-select-search--inline"
      >
        <span
          class="wmstool-select-search__field__wrap"
        >
          <input
            class="wmstool-select-search__field"
            role="textbox"
            value=""
          />
          <span
            class="wmstool-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
    <span
      class="wmstool-select-search__field__placeholder"
      style="display:block"
    >
      Please select
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/treeData.md correctly 1`] = `
<span
  class="wmstool-select wmstool-select-enabled"
  style="width:300px"
>
  <span
    aria-autocomplete="list"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <span
      class="wmstool-select-selection__rendered"
    >
      <span
        class="wmstool-select-selection__placeholder"
      >
        Please select
      </span>
    </span>
    <span
      class="wmstool-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;
